--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
         <title>Kisan Sewa</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="./assets/images/web-icon.ico" />
+        <link rel="icon" type="image/x-icon"
+            href="./assets/images/web-icon.ico" />
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link
